# S.Q.R.O-phishing_detector

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
ai/: README.md  requirements.txt
ai/scripts/: run-train.sh
ai/src/: sqro.py  train.py
ai/src/core/: settings.py
ai/src/model/: embedding.py  evaluate.py  features.py  model.py  multimodal_bert.py
ai/src/preprocess/: dataset.py  language.py  preprocess.py
ai/src/transformer/: embedding.py  layers.py  model.py
ai/src/utils/: logging.py
scripts/: lint.sh  run-dev.sh
src/: sqro.py
src/core/: exceptions.py  settings.py
src/preprocess/: language.py
src/transformer/: embedding.py  layers.py  model.py
tests/: test_default.py
web/src/: __init__.py  server.py
web/src/core/: settings.py
web/src/utils/: logging.py
web/tests/: conftest.py  test_routes.py
